test/negative/407_string_literal_pat_on_int.fx
// expect: type
val x = match 5 { | "s" => 1 | _ => 0 }
println(x)
